<resources>
    <string name="app_name">机锋市场</string>
    <string name="app_name_en">aMarket2.0</string>
    <string name="notification_update_info">今天更新%1$s款软件,您有%2$s款需要更新。</string>
    <string name="notification_server_error">服务器暂时无法访问，请稍候重试。</string>
    <string name="notification_client_error">客户端访问错误，请检查设置。</string>
    <string name="tab_product">市场应用</string>
    <string name="tab_bbs">论坛附件</string>
    <string name="tab_product_result">市场应用(%1$s)</string>
    <string name="tab_bbs_result">论坛附件(%1$s)</string>
    <string name="hint_search">搜索机锋市场软件及论坛附件</string>
    <string name="search_no_result">没有搜索到内容</string>
    <string name="warning_no_input">请输入搜索关键词</string>
    <string name="start_download_bbs_apk">马上开始下载附件</string>
    <string name="register">注册</string>
    <string name="register_ok">注册成功</string>
    <string name="registering">注册中，请稍候</string>
    <string name="register_label">提交</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="hint_email">邮箱</string>
    <string name="error_username_empty">用户名不能为空</string>
    <string name="error_username_length_invalid">用户名必须大于3个字符，小于16个字符</string>
    <string name="error_email_empty">邮箱不能为空</string>
    <string name="error_email_format_invalid">邮箱格式不正确</string>
    <string name="error_email_length_invalid">邮箱必须大于6个字符，小于40个字符</string>
    <string name="error_password_empty">密码不能为空</string>
    <string name="error_password_length_invalid">密码必须大于1个字符，小于32个字符</string>
    <string name="error_password_not_same">密码不匹配</string>
    <string name="error_username_invalid">用户名不合法，请重新输入</string>
    <string name="error_username_exist">用户名已经被注册，请尝试其他的用户名。</string>
    <string name="error_email_invalid">您输入的邮箱格式不正确。</string>
    <string name="error_email_exist">邮箱已经被注册，请尝试其他的邮箱。</string>
    <string name="error_password_invalid">密码不合法。</string>
    <string name="error_other">注册失败，未知原因。</string>
    <string name="register_tip">还没有机锋账号？\n立即创建</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="singin">登录中，请稍候</string>
    <string name="login_tip">已经拥有机锋账号？\n立即登录</string>
    <string name="hint_input_username">机锋帐号</string>
    <string name="hint_input_password">密码</string>
    <string name="error_login_username">用户名不存在，请重新输入。</string>
    <string name="error_login_password">密码不正确，请重新输入。</string>
    <string name="error_login_other">登录失败，请稍候重试。</string>
    <string name="warning_no_download">没有选择任何一款应用</string>
    <string name="main_tab_index">首页</string>
    <string name="main_tab_sort">分类</string>
    <string name="main_tab_rank">排行</string>
    <string name="main_tab_relax">轻松模式</string>
    <string name="main_tab_app">管理</string>
    <string name="rank_top_title">应用排行</string>
    <string name="rank_tab_game">游戏</string>
    <string name="rank_tab_app">应用</string>
    <string name="rank_tab_book">电子书</string>
    <string name="rank_tab_fast">风向标</string>
    <string name="download_unknown_title">"&lt;未命名&gt;"</string>
    <string name="notification_filename_separator">", "</string>
    <string name="notification_filename_extras">" 还有%1$d项"</string>
    <string name="notification_paused_by_app">被暂停</string>
    <string name="notification_download_complete">"下载完成"</string>
    <string name="sort_top_title">应用分类</string>
    <string name="sort_tab_pop">最热</string>
    <string name="sort_tab_new">最新</string>
    <string name="category_title_genius">精选专题</string>
    <string name="sort_install_nessary_title">装机必备</string>
    <string name="sort_install_nessary_exit">关闭</string>
    <string name="sort_install_nessary_down">下载所选</string>
    <string name="sort_install_installed">已安装</string>
    <string name="gfan_comments">%1$s个评级</string>
    <string name="has_update">有新版本</string>
    <string name="has_installed">已安装</string>
    <string name="duihuanquan_unit">%d券</string>
    <string name="lable_description">简介</string>
    <string name="comment_lab">评论(%d)</string>
    <string name="warning_comment_later">已经开始下载，请稍候</string>
    <string name="person_account_title">个人中心</string>
    <string name="account_logined">已登录，点击注销</string>
    <string name="account_logo_title">登录机锋帐号</string>
    <string name="account_clound_title">云推送</string>
    <string name="account_logo_desc">登陆后可开启以下功能与服务</string>
    <string name="account_clound_desc">从机锋市场推送APK到手机</string>
    <string name="account_payment_desc">便利地充值和购买付费内容</string>
    <string name="account_payment_balance">余额 : %1$s券 , 点击充值</string>
    <string name="account_payment_over">已完成交易</string>
    <string name="account_payed_count">%1$d笔</string>
    <string name="account_payed">购买</string>
    <string name="account_payment_title">充值</string>
    <string name="account_payed_history">购买历史记录</string>
    <string name="account_no_pay_log">没有购买记录</string>
    <string name="account_logout">注销</string>
    <string name="account_recharge">充值</string>
    <string name="account_start">开启</string>
    <string name="account_starting">开启中</string>
    <string name="account_close">关闭</string>
    <string name="sure_to_regist">确定要注销吗?</string>
    <string name="sure_to_bind">云推送服务将使用更多流量，建议WIFI环境下开启</string>
    <string name="account_bind_error">云推送绑定失败，请稍后再试</string>
    <string name="account_remind">提醒</string>
    <string name="account_binding">云推送绑定中</string>
    <string name="account_bind_success">云推送绑定成功</string>
    <string name="menu_account">个人中心</string>
    <string name="menu_setting">设置</string>
    <string name="menu_feedback">反馈</string>
    <string name="menu_bbs">社区</string>
    <string name="menu_exit">退出</string>
    <string name="menu_del_all">全部删除</string>
    <string name="download_status_downloading">下载中</string>
    <string name="download_status_downloaded">请安装</string>
    <string name="download_status_installing">安装中</string>
    <string name="download_status_installed">已安装</string>
    <string name="download_all_update">全部更新</string>
    <string name="install_fail_file_not_exist">安装文件已不存在</string>
    <string name="download_remain_bytes">剩余%1$s%2$s</string>
    <string name="download_start">下载马上开始</string>
    <string name="retry">重试</string>
    <string name="back">返回</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="attention">注意</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="info">消息</string>
    <string name="loading">加载中</string>
    <string name="download">下载</string>
    <string name="upgrade">升级</string>
    <string name="app_download">软件下载</string>
    <string name="get_push_msg">马上开始下载推送的应用</string>
    <string name="open_push">开启</string>
    <string name="hint_rating_count">%d人评分</string>
    <string name="rating">评分</string>
    <string name="open_apk_error_no_launch">没有应用程序可执行此操作</string>
    <string name="check_network">正在检测网络</string>
    <string name="network_status">检测到您正在使用%1$s网络</string>
    <string name="network_wifi">WIFI</string>
    <string name="network_valid">3G</string>
    <string name="network_cmwap">CMWAP</string>
    <string name="network_invalid">无网络</string>
    <string name="network_no_permission">无网络访问权限</string>
    <string name="no_valid_network">对不起，请检查网络是否可用？</string>
    <string name="network_retry">重试</string>
    <string name="network_setting">设置</string>
    <string name="init_data">正在获取最新内容</string>
    <string name="lable_not_found">对不起，没有找到这款应用。</string>
    <string name="warning_password_is_empty">密码不能为空</string>
    <string name="hint_purchase">此软件需要%d个机锋券，请输入密码确认收费。</string>
    <string name="hint_purchase_success">购买成功</string>
    <string name="hint_purchase_failed">购买失败</string>
    <string name="hint_purchase_password_error">支付密码错误</string>
    <string name="warning_no_balance">您的帐号中没有足够的机锋券，点击\"是\"进入充值中心，或者\"否\"取消</string>
    <string name="useragent_app_name">aMarket2.0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="alert_dialog_error">连接失败，请稍候重试</string>
    <string name="no_data">连接失败，请检查你的网络后重试</string>
    <string name="permissions">所需权限：</string>
    <string name="no_permissions">"不需要任何权限"</string>
    <string name="permissions_desc">此应用程序需要以下权限，请确认后再下载</string>
    <string name="perms_hide">
        <b>"隐藏"</b>
    </string>
    <string name="perms_show_all">
        <b>"全部显示"</b>
    </string>
    <string name="default_permission_group">"默认"</string>
    <string name="permissions_format">%1$s, %2$s</string>
    <string name="label_more">更多</string>
    <string name="label_less">收起</string>
    <string name="lable_send">发送</string>
    <string name="lable_hint_comment">讨论、提问以及建议</string>
    <string name="lable_size">大小：</string>
    <string name="lable_version">版本号：</string>
    <string name="lable_download">下载量：</string>
    <string name="lable_author">作者：</string>
    <string name="lable_ranking_over">谢谢</string>
    <string name="alert_post_ok">发表成功</string>
    <string name="done">完成</string>
    <string name="leble_google">Google</string>
    <string name="hint_no_comments">暂时没有评论内容!</string>
    <string name="no_network_permission">没有获得访问网络数据权限</string>
    <string name="no_network">网络异常，请重试</string>
    <string name="alert_unsafe_word">对不起，不能发表包含敏感词汇的内容。</string>
    <string name="alert_product_not_exist">对不起，此商品维护中，暂时无法对它进行评论。</string>
    <string name="alert_user_forbidden">对不起，您已经被禁言，请联系管理员。</string>
    <string name="alert_start_download">即将下载您选择的这款应用。</string>
    <string name="alert_no_download_url">对不起，暂时无法下载，请稍后重试。</string>
    <string name="alert_post_error">发表失败，请稍后重试</string>
    <string name="alert_post_not_null">不能发表空内容</string>
    <string name="lable_not_install">立即安装，进行评分。</string>
    <string name="lable_not_login">立即登录，参与讨论。</string>
    <string name="lable_ranking_1">很烂</string>
    <string name="lable_ranking_2">不怎么样</string>
    <string name="lable_ranking_3">一般</string>
    <string name="lable_ranking_4">不错</string>
    <string name="lable_ranking_5">很棒</string>
    <string name="lable_myrating">我的评分</string>
    <string name="free">免费</string>
    <string name="sync_charge_info">同步充值信息</string>
    <string name="cards_title">选择电话卡类型</string>
    <string name="denomination_title">选择充值卡金额</string>
    <string name="card_number_hint">输入卡号</string>
    <string name="card_password_hint">输入密码</string>
    <string name="charge_hint">警告！充值金额必须和充值卡的面额一致，否则可能造成充值失败或充值卡作废。点击此处查看帮助。
    </string>
    <string name="btn_charge">充值</string>
    <string name="alipay_charge_content">您好，%1$s，您有%2$d机锋券。\n请您输入充值金额。</string>
    <string name="alipay_charge_info">元</string>
    <string name="charge_hint_alipay">说明：1元等于10机锋券。</string>
    <string name="checkbox_default_charge_type">将此方式设为默认方式</string>
    <string name="pref_search_settings">搜索设置</string>
    <string name="pref_search_settings_title">清除搜索历史</string>
    <string name="pref_search_settings_summary">立即清除您的所有搜索历史</string>
    <string name="pref_search_settings_dialog">立即清除您的所有搜索历史？</string>
    <string name="pref_cache_settings">缓存设置</string>
    <string name="pref_cache_settings_auto">自动清除</string>
    <string name="pref_cache_settings_auto_summary">当退出程序时，自动清除所有缓存</string>
    <string name="pref_cache_settings_manual">清除缓存</string>
    <string name="pref_cache_settings_manual_summary">立即清除所有缓存</string>
    <string name="pref_cache_settings_manual_dialog">立即清除所有缓存?</string>
    <string name="pref_market_settings">市场设置</string>
    <string name="pref_market_app_filter">应用过滤</string>
    <string name="pref_market_app_filter_summary">只显示适合本机型分辨率的应用</string>
    <string name="ic_about">关于</string>
    <string name="feedback_hint">反馈邮箱 </string>
    <string name="tele_hint">客服电话</string>
    <string name="qq_group">QQ讨论群</string>
    <string name="qq_group_id">1群:67361128 2群:135339188 3群:34186934 4群:102076930</string>
</resources>