<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 mAPPn.Inc

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/pref_cache_settings">
            
        <CheckBoxPreference
                android:key="auto_clear_cache"
                android:title="@string/pref_cache_settings_auto"
                android:summary="@string/pref_cache_settings_auto_summary" />
        
        <com.mappn.gfan.common.widget.ClientDialogPreference
                android:key="manual_clear_cache"
                android:title="@string/pref_cache_settings_manual"
                android:summary="@string/pref_cache_settings_manual_summary"
                android:dialogMessage="@string/pref_cache_settings_manual_dialog"
                android:persistent="false" />
            
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pref_search_settings">
            
        <com.mappn.gfan.common.widget.ClientDialogPreference
                android:key="manual_clear_search_history"
                android:title="@string/pref_search_settings_title"
                android:summary="@string/pref_search_settings_summary"
                android:dialogMessage="@string/pref_search_settings_dialog"
                android:persistent="false" />
            
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pref_market_settings">
            
        <CheckBoxPreference
                android:key="no_app_filter"
                android:title="@string/pref_market_app_filter"
                android:summary="@string/pref_market_app_filter_summary"
                android:persistent="true" />
            
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/ic_about">
        <Preference android:key="app_info"
            android:title="@string/app_name"
            android:persistent="false" />
        <Preference 
            android:title="@string/qq_group"
            android:summary="@string/qq_group_id"
            android:persistent="false" />
        <Preference android:key="feedback"
            android:title="@string/feedback_hint"
            android:persistent="false"/>
        <Preference android:key="tele"
            android:title="@string/tele_hint"
            android:persistent="false"/>
    </PreferenceCategory>
                
</PreferenceScreen>
