<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- 帐号中心 -->
    <item
        android:icon="@drawable/ic_menu_login"
        android:id="@+id/menu_account"
        android:title="@string/menu_account"
        android:alphabeticShortcut="a" />
    <!-- 设置 -->
    <item
        android:icon="@drawable/ic_menu_preferences"
        android:id="@+id/menu_setting"
        android:title="@string/menu_setting"
        android:alphabeticShortcut="b" />
    <!-- 反馈 -->    
    <item
        android:icon="@drawable/ic_menu_start_conversation"
        android:id="@+id/menu_feedback"
        android:title="@string/menu_feedback"
        android:alphabeticShortcut="c" />
    <!-- 社区 -->
    <item
        android:icon="@drawable/ic_menu_bbs"
        android:id="@+id/menu_bbs"
        android:title="@string/menu_bbs"
        android:alphabeticShortcut="d" /> 
    <!-- 退出 -->
    <item
        android:icon="@drawable/ic_menu_close_clear_cancel"
        android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
        android:alphabeticShortcut="e" /> 
</menu>