<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:titleSpinner="http://schemas.android.com/apk/res/com.mappn.gfan"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<include layout="@layout/top_bar" />
	<ViewAnimator android:id="@+id/va_center_area"
		android:layout_width="fill_parent" android:layout_height="0dp"
		android:layout_weight="1.0" android:layout_marginTop="-5dp">
		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="horizontal"
			android:layout_gravity="center">
			<LinearLayout android:id="@+id/ll_hint_container"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:orientation="horizontal" android:layout_centerInParent="true">
				<ProgressBar android:id="@+id/pb_progress"
					android:layout_width="18dp" android:layout_height="18dp"
					android:layout_marginRight="3dp" android:indeterminateOnly="true"
					android:indeterminateBehavior="repeat"
					android:indeterminateDuration="3500" />
				<TextView android:id="@+id/tv_hint" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:paddingLeft="30dp"
					android:paddingRight="30dp" android:text="@string/sync_charge_info" />
			</LinearLayout>
			<Button android:id="@+id/btn_retry" android:text="@string/retry"
				android:paddingLeft="20dp" android:paddingRight="20dp"
				android:layout_below="@id/ll_hint_container"
				android:layout_centerHorizontal="true" android:visibility="gone"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:gravity="center" android:textSize="16sp" />
		</RelativeLayout>
		<ScrollView android:layout_height="wrap_content"
			android:layout_weight="1" android:orientation="vertical"
			android:layout_width="fill_parent">
			<LinearLayout android:layout_height="wrap_content"
				android:orientation="vertical" android:layout_width="fill_parent"
				android:paddingLeft="10dp" android:paddingRight="10dp"
				android:paddingTop="10dp">
				<com.mappn.gfan.common.widget.TitleSpinner 
					android:id="@+id/ts_cards" android:layout_marginTop="10dp"
					android:text="@string/cards_title" titleSpinner:prompt="@string/cards_title"
					android:layout_width="fill_parent" android:layout_height="wrap_content" />
				<com.mappn.gfan.common.widget.TitleSpinner
					android:id="@+id/ts_denomination" android:layout_marginTop="10dp"
					android:text="@string/denomination_title" titleSpinner:prompt="@string/denomination_title"
					android:layout_width="fill_parent" android:layout_height="wrap_content" />
				<EditText android:id="@+id/et_cardNumber"
					android:singleLine="true" android:layout_marginTop="10dp"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:hint="@string/card_number_hint" />
				<EditText android:id="@+id/et_cardPassword"
					android:singleLine="true" android:layout_marginTop="10dp"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:hint="@string/card_password_hint" />
				<TextView android:id="@+id/tv_charge_tip"
					android:clickable="true" android:paddingLeft="10dp"
					android:layout_marginTop="10dp" android:drawableLeft="@drawable/indicator_input_error"
					android:text="@string/charge_hint" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:drawablePadding="8dp" />
                <CheckBox android:id="@+id/cb_make_default_charge_type"
                    android:layout_width="wrap_content" android:text="@string/checkbox_default_charge_type"
                    android:layout_height="wrap_content" />
				<Button android:id="@+id/btn_charge" android:layout_width="fill_parent"
					android:layout_marginTop="10dp" android:layout_height="wrap_content"
					android:text="@string/btn_charge" />
			</LinearLayout>
		</ScrollView>
	</ViewAnimator>
</LinearLayout>