<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:gravity="center_horizontal" >
	
	<include android:id="@+id/top_bar" 
        layout="@layout/top_bar" 
        android:layout_alignParentTop="true" />

	<EditText android:id="@+id/et_username" 
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content" 
	   android:hint="@string/hint_input_username"
	   android:singleLine="true" 
       android:maxLength="16"
	   android:layout_marginLeft="8dip"
	   android:layout_marginRight="8dip"
	   android:layout_marginBottom="8dip"
	   android:layout_marginTop="70dip" />
	   
	<EditText android:id="@+id/et_password" 
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content" 
	   android:hint="@string/hint_input_password"
	   android:password="true" 
	   android:singleLine="true"
       android:maxLength="32"
	   android:layout_margin="8dip" 
	   android:layout_below="@id/et_username" />
	   
	<TextView android:id="@+id/btn_register"
       android:layout_width="150dip" 
       android:layout_height="wrap_content"
       android:text="@string/register_tip"
       android:layout_below="@id/et_password"
       android:layout_marginLeft="8dip"
       android:layout_marginTop="10dp"
       android:layout_alignParentLeft="true"
       android:gravity="left" />
       
	<Button android:id="@+id/btn_login"
	   android:layout_width="150dp" 
	   android:layout_height="wrap_content"
	   android:text="@string/login" 
	   android:layout_below="@id/et_password"
	   android:layout_marginTop="10dp"
	   android:layout_alignParentRight="true"
	   android:layout_marginRight="8dip"/>
	   
	<!-- Login Info TextView -->
	<TextView android:id="@+id/alert_tip_text" 
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content" 
	   android:layout_marginLeft="10dip"
	   android:layout_marginRight="10dip" 
	   android:layout_below="@id/top_bar"
	   android:padding="5dip"
	   android:background="#FFFFFFCC"
	   android:visibility="gone"
	   android:layout_centerHorizontal="true" />
	   
</RelativeLayout>
