<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/top_bar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:scrollbarThumbVertical="@drawable/scrollbar">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content">

            <!-- UserName -->
            <EditText android:id="@+id/et_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:hint="@string/hint_username"
                android:singleLine="true" 
                android:maxLength="16"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp" />

            <!-- Email -->
            <EditText android:id="@+id/et_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:hint="@string/hint_email"
                android:singleLine="true" 
                android:inputType="textEmailAddress"
                android:layout_below="@id/et_username"
                android:maxLength="40" 
                android:layout_marginTop="5dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp" />

            <!-- Password -->
            <EditText android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:hint="@string/hint_password"
                android:singleLine="true" 
                android:password="true"
                android:maxLength="32" 
                android:layout_below="@id/et_email"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp" />

            <!-- Confirm Password -->
            <EditText android:id="@+id/et_confirm_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:singleLine="true"
                android:hint="@string/hint_confirm_password"
                android:password="true" 
                android:maxLength="32"
                android:layout_below="@id/et_password"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp" />

            <TextView android:text="@string/login_tip"
                android:id="@+id/btn_cancel" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_confirm_password"
                android:layout_alignParentLeft="true" 
                android:gravity="left"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="13dp" />

            <Button android:text="@string/register_label"
                android:id="@+id/btn_register" 
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_confirm_password"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="13dp"/>

        </RelativeLayout>

    </ScrollView>
</LinearLayout>